// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Basic Info
    </h4>
    <div
      class="makeStyles-row-2"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.name"
          id="experiment.name-label"
        >
          Experiment name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.name-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.name"
            name="experiment.name"
            placeholder="experiment_name"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
            >
              <span>
                Experiment name
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.name-helper-text"
        >
          Use snake_case.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-2"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.description"
          id="experiment.description-label"
        >
          Experiment description
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-describedby="experiment.description-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            id="experiment.description"
            name="experiment.description"
            placeholder="Monthly vs. yearly pricing"
            required=""
            rows="4"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
            >
              <span>
                Experiment description
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.description-helper-text"
        >
          State your hypothesis.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-2"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-4"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.startDatetime"
          id="experiment.startDatetime-label"
        >
          Start date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.startDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.startDatetime"
            max="2021-07-21"
            min="2020-07-21"
            name="experiment.startDatetime"
            required=""
            type="date"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
            >
              <span>
                Start date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.startDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
      <span
        class="makeStyles-through-3"
      >
         through 
      </span>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-4"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.endDatetime"
          id="experiment.endDatetime-label"
        >
          End date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.endDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.endDatetime"
            name="experiment.endDatetime"
            required=""
            type="date"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
            >
              <span>
                End date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.endDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-2"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.ownerLogin"
          id="experiment.ownerLogin-label"
        >
          Owner
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              @
            </p>
          </div>
          <input
            aria-describedby="experiment.ownerLogin-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            id="experiment.ownerLogin"
            name="experiment.ownerLogin"
            placeholder="wp_username"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
            >
              <span>
                Owner
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.ownerLogin-helper-text"
        >
          Use WordPress.com username.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders date validation errors as expected 1`] = `
<div>
  <div
    class="makeStyles-root-17"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Basic Info
    </h4>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.name"
          id="experiment.name-label"
        >
          Experiment name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.name-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.name"
            name="experiment.name"
            placeholder="experiment_name"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Experiment name
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.name-helper-text"
        >
          Use snake_case.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.description"
          id="experiment.description-label"
        >
          Experiment description
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-describedby="experiment.description-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            id="experiment.description"
            name="experiment.description"
            placeholder="Monthly vs. yearly pricing"
            required=""
            rows="4"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Experiment description
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.description-helper-text"
        >
          State your hypothesis.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-20"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="experiment.startDatetime"
          id="experiment.startDatetime-label"
        >
          Start date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.startDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.startDatetime"
            max="2021-07-21"
            min="2020-07-21"
            name="experiment.startDatetime"
            required=""
            type="date"
            value="2020-07-20"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Start date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          id="experiment.startDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
      <span
        class="makeStyles-through-19"
      >
         through 
      </span>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-20"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.endDatetime"
          id="experiment.endDatetime-label"
        >
          End date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.endDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.endDatetime"
            max="2021-07-20"
            min="2020-07-20"
            name="experiment.endDatetime"
            required=""
            type="date"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                End date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.endDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.ownerLogin"
          id="experiment.ownerLogin-label"
        >
          Owner
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              @
            </p>
          </div>
          <input
            aria-describedby="experiment.ownerLogin-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            id="experiment.ownerLogin"
            name="experiment.ownerLogin"
            placeholder="wp_username"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Owner
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.ownerLogin-helper-text"
        >
          Use WordPress.com username.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders date validation errors as expected 2`] = `
<div>
  <div
    class="makeStyles-root-17"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Basic Info
    </h4>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.name"
          id="experiment.name-label"
        >
          Experiment name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.name-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.name"
            name="experiment.name"
            placeholder="experiment_name"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Experiment name
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.name-helper-text"
        >
          Use snake_case.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.description"
          id="experiment.description-label"
        >
          Experiment description
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-describedby="experiment.description-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            id="experiment.description"
            name="experiment.description"
            placeholder="Monthly vs. yearly pricing"
            required=""
            rows="4"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Experiment description
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.description-helper-text"
        >
          State your hypothesis.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-20"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="experiment.startDatetime"
          id="experiment.startDatetime-label"
        >
          Start date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.startDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.startDatetime"
            max="2021-07-21"
            min="2020-07-21"
            name="experiment.startDatetime"
            required=""
            type="date"
            value="2025-07-20"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Start date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          id="experiment.startDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
      <span
        class="makeStyles-through-19"
      >
         through 
      </span>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-20"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.endDatetime"
          id="experiment.endDatetime-label"
        >
          End date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.endDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.endDatetime"
            max="2026-07-20"
            min="2025-07-20"
            name="experiment.endDatetime"
            required=""
            type="date"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                End date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.endDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.ownerLogin"
          id="experiment.ownerLogin-label"
        >
          Owner
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              @
            </p>
          </div>
          <input
            aria-describedby="experiment.ownerLogin-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            id="experiment.ownerLogin"
            name="experiment.ownerLogin"
            placeholder="wp_username"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Owner
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.ownerLogin-helper-text"
        >
          Use WordPress.com username.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders date validation errors as expected 3`] = `
<div>
  <div
    class="makeStyles-root-17"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Basic Info
    </h4>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.name"
          id="experiment.name-label"
        >
          Experiment name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.name-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.name"
            name="experiment.name"
            placeholder="experiment_name"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Experiment name
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.name-helper-text"
        >
          Use snake_case.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.description"
          id="experiment.description-label"
        >
          Experiment description
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-describedby="experiment.description-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            id="experiment.description"
            name="experiment.description"
            placeholder="Monthly vs. yearly pricing"
            required=""
            rows="4"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Experiment description
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.description-helper-text"
        >
          State your hypothesis.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-20"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="experiment.startDatetime"
          id="experiment.startDatetime-label"
        >
          Start date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.startDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.startDatetime"
            max="2021-07-21"
            min="2020-07-21"
            name="experiment.startDatetime"
            required=""
            type="date"
            value="2020-07-28"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Start date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          id="experiment.startDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
      <span
        class="makeStyles-through-19"
      >
         through 
      </span>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-20"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="experiment.endDatetime"
          id="experiment.endDatetime-label"
        >
          End date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.endDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.endDatetime"
            max="2021-07-28"
            min="2020-07-28"
            name="experiment.endDatetime"
            required=""
            type="date"
            value="2020-07-20"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                End date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          id="experiment.endDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.ownerLogin"
          id="experiment.ownerLogin-label"
        >
          Owner
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              @
            </p>
          </div>
          <input
            aria-describedby="experiment.ownerLogin-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            id="experiment.ownerLogin"
            name="experiment.ownerLogin"
            placeholder="wp_username"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Owner
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.ownerLogin-helper-text"
        >
          Use WordPress.com username.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders date validation errors as expected 4`] = `
<div>
  <div
    class="makeStyles-root-17"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Basic Info
    </h4>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.name"
          id="experiment.name-label"
        >
          Experiment name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.name-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.name"
            name="experiment.name"
            placeholder="experiment_name"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Experiment name
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.name-helper-text"
        >
          Use snake_case.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.description"
          id="experiment.description-label"
        >
          Experiment description
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-describedby="experiment.description-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            id="experiment.description"
            name="experiment.description"
            placeholder="Monthly vs. yearly pricing"
            required=""
            rows="4"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Experiment description
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.description-helper-text"
        >
          State your hypothesis.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-20"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="experiment.startDatetime"
          id="experiment.startDatetime-label"
        >
          Start date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.startDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.startDatetime"
            max="2021-07-21"
            min="2020-07-21"
            name="experiment.startDatetime"
            required=""
            type="date"
            value="2020-07-28"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Start date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          id="experiment.startDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
      <span
        class="makeStyles-through-19"
      >
         through 
      </span>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-20"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="experiment.endDatetime"
          id="experiment.endDatetime-label"
        >
          End date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.endDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.endDatetime"
            max="2021-07-28"
            min="2020-07-28"
            name="experiment.endDatetime"
            required=""
            type="date"
            value="2025-07-21"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                End date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          id="experiment.endDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-18"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.ownerLogin"
          id="experiment.ownerLogin-label"
        >
          Owner
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              @
            </p>
          </div>
          <input
            aria-describedby="experiment.ownerLogin-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            id="experiment.ownerLogin"
            name="experiment.ownerLogin"
            placeholder="wp_username"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
            >
              <span>
                Owner
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.ownerLogin-helper-text"
        >
          Use WordPress.com username.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders sensible dates as expected 1`] = `
<div>
  <div
    class="makeStyles-root-9"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
    >
      Basic Info
    </h4>
    <div
      class="makeStyles-row-10"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.name"
          id="experiment.name-label"
        >
          Experiment name
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.name-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.name"
            name="experiment.name"
            placeholder="experiment_name"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
            >
              <span>
                Experiment name
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.name-helper-text"
        >
          Use snake_case.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-10"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.description"
          id="experiment.description-label"
        >
          Experiment description
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-describedby="experiment.description-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            id="experiment.description"
            name="experiment.description"
            placeholder="Monthly vs. yearly pricing"
            required=""
            rows="4"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
            >
              <span>
                Experiment description
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.description-helper-text"
        >
          State your hypothesis.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-10"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-12"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="experiment.startDatetime"
          id="experiment.startDatetime-label"
        >
          Start date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.startDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.startDatetime"
            max="2021-07-21"
            min="2020-07-21"
            name="experiment.startDatetime"
            required=""
            type="date"
            value="2020-07-28"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
            >
              <span>
                Start date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          id="experiment.startDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
      <span
        class="makeStyles-through-11"
      >
         through 
      </span>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-datePicker-12"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
          data-shrink="true"
          for="experiment.endDatetime"
          id="experiment.endDatetime-label"
        >
          End date
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-describedby="experiment.endDatetime-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="experiment.endDatetime"
            max="2021-07-28"
            min="2020-07-28"
            name="experiment.endDatetime"
            required=""
            type="date"
            value="2020-10-28"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
            >
              <span>
                End date
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          id="experiment.endDatetime-helper-text"
        >
          Use the UTC timezone.
        </p>
      </div>
    </div>
    <div
      class="makeStyles-row-10"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-required Mui-required"
          data-shrink="true"
          for="experiment.ownerLogin"
          id="experiment.ownerLogin-label"
        >
          Owner
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              @
            </p>
          </div>
          <input
            aria-describedby="experiment.ownerLogin-helper-text"
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            id="experiment.ownerLogin"
            name="experiment.ownerLogin"
            placeholder="wp_username"
            required=""
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
            >
              <span>
                Owner
                 *
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          id="experiment.ownerLogin-helper-text"
        >
          Use WordPress.com username.
        </p>
      </div>
    </div>
  </div>
</div>
`;
